# vq_ace

./: .gitignore  README.md  pyproject.toml
scripts/: dataset_check.py  export_onnx.py  run_pipeline.py
srl_il/algo/: act.py  base_algo.py  diffusion_policy.py  mixin_obs.py
srl_il/cfg/: imitation_learning_faive.yaml  imitation_learning_faive_act.yaml  imitation_learning_robomimic_act.yaml  imitation_learning_robomimic_diffusion.yaml
srl_il/cfg/preset_robomimic/: can_image.yaml  lift_image.yaml  square_image.yaml  tool_hang_image.yaml  tool_hang_image_abs.yaml  transport_image.yaml
srl_il/common/: autoinit_class.py  chunk_buffer.py  rotation_transformer.py  timer.py
srl_il/dataset/: dataset_base.py  faive_dataset.py  robomimic_dataset.py
srl_il/export/: __init__.py  il_policy.py
srl_il/models/common/: linear_normalizer.py  position_encoding.py  transformer.py
srl_il/models/robomimic_utils/: crop_randomizer.py
srl_il/pipeline/: data_augmentation.py  imitation_learning.py  mujoco_visulizer.py  pipeline_base.py  training.py
srl_il/pipeline/vis_mixins/: env_rollout_mixin.py  mujoco_visulizer.py  visualize_projected_actions.py
srl_il/simulators/robomimic/: __init__.py  env_runner.py
tests/: test_act_algo.py  test_chunk_queue.py  test_save_and_load.py  test_seq_dataset.py
vq_ace/algo/: act.py  base_algo.py  mixin_obs.py
vq_ace/cfg/: train_embed_act.yaml  train_embed_vq_act.yaml  train_embed_vq_act_no_condition.yaml
vq_ace/dataset/: dataset_base.py  dexycb_dataset.py  embed_faive_dataset.py  faive_dataset.py  rokoko_dataset.py
vq_ace/export/: __init__.py  vqace.py
vq_ace/models/common/: position_encoding.py  transformer.py  vector_quantizer.py
vq_ace/pipeline/: data_augmentation.py  mujoco_visulizer.py  pipeline_base.py  training.py
vq_ace/scripts/: dataset_check.py  export_onnx.py  export_onnx.sh  run_pipeline.py
