[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "vq_ace"
version = "0.1.0"  # Replace with your actual version
description = "Efficient Policy Search for Dexterous Robotic Manipulation via Action Chunking Embedding"
readme = "README.md"
# license = "GPL-3.0"  # Replace with your actual license
authors = [{ name = "Chenyu Yang", email = "chenyu.yang@ethz.ch" }]  # Replace with your details
dependencies = [
    "torch",
    "torchvision",
    "diffusers",
    "wandb",
    "hydra-core",
    "h5py",
    "numpy",
    "scipy",
    "matplotlib",
    "opencv-python",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "mypy",
]
test = [
    "pytest",
    "coverage",
]
onnx = [
    "onnx",
    "onnxruntime"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []
